红酒手机端

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
     </nav>
 </header>
-    <div class="banner-wrap">
+    <div class="swiper-outer-wrapper">
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
@@ -131,7 +131,6 @@
             </div>
         </div>
         <div class="swiper-pagination"></div>
-
     </div>
     <main class="main">
         <section class="item-section product-area">
@@ -312,6 +311,7 @@
 <script src="js/public/base.js"></script>
     <script src="js/public/swiper/swiper.js"></script>
     <script src="js/index.js"></script>
+
 </body>
 
 </html>
