--- a/navigation.html
+++ b/navigation.html
@@ -82,11 +82,11 @@
             <div class="user-container media">
                 <a class="user-center media-item" href="###">
                     <span class="iconfont icon-businesscard"></span>
-                    <span>商家中心</span>
+                    <span class="item-figicaption">商家中心</span>
                 </a>
                 <a class="user-center media-item" href="personal.html">
                     <span class="iconfont icon-crown"></span>
-                    <span>个人中心</span>
+                    <span class="item-figicaption">个人中心</span>
                 </a>
             </div>
         </section>
@@ -186,13 +186,13 @@
                     <div class="media other-link">
                         <a href="###" class="media-item">
                             <!-- <div class="media-img"> -->
-                                <img src="images/icon-5.png" alt="">
+                            <img class="media-img" src="images/icon-5.png" alt="">
                             <!-- </div> -->
                             <span>套装推介</span>
                         </a>
                         <a href="###" class="media-item">
                             <!-- <div class="media-img"></div> -->
-                            <img src="images/icon-3.png" alt="">
+                            <img class="media-img" src="images/icon-3.png" alt="">
                             <span>周边产品</span>
                         </a>
                     </div>
@@ -201,10 +201,66 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
-
-    </footer>
-    <script src="js/public/jquery.min.js"></script>
+    <footer class="common-footer">
+    <div class="footer-above">
+        <div class="row website-link">
+            <div class="column">
+                <ul class="link-list">
+                    <li class="link-item">
+                        <a href="#">关于我们</a>
+                    </li>
+                    <li class="link-item">
+                        <a href="#">加入我们</a>
+                    </li>
+                    <li class="link-item">
+                        <a href="#">联系我们</a>
+                    </li>
+                    <li class="link-item">
+                        <a href="#">代理合作</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="column">
+                <ul class="link-list">
+                    <li class="link-item">
+                        <span class="iconfont icon-Language"></span>
+                        <span>简体中文</span>
+                    </li>
+                    <li class="link-item">
+                        <a href="#">在线客服</a>
+                    </li>
+                    <li class="link-item">
+                        <a href="#">关注我们</a>
+                    </li>
+                    <li class="link-item">
+                        <span class="iconfont icon-weibotaidu"></span>
+                        <span class="iconfont icon-wechat"></span>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="row statement">
+            <p class="copyright">
+                Confidential
+                <span class="iconfont icon-copyright"></span>
+                2017 Y-store 广州福思酒业 版权所有
+            </p>
+            <p class="callback">
+                <span>
+                    <a href="#">法律声明</a>
+                </span>
+                <span>
+                    <a href="#">问题反馈</a>
+                </span>
+            </p>
+        </div>
+    </div>
+    <div class="footer-below">
+        <div class="toTop" id="toTop">
+            <span class="iconfont icon-arrow_top"></span>
+        </div>
+    </div>
+</footer> <script src="js/public/jquery.min.js"></script>
 <script src="js/public/base.js"></script>
     <script src="js/public/swiper/swiper.js"></script>
     <script src="js/navigation.js"></script>
