--- a/order-payment.html
+++ b/order-payment.html
@@ -76,11 +76,12 @@
         </div>
     </nav>
 </header>
-	<div class="banner">
-		<h2 class="banner-title">订单支付</h2>
-	</div>
+
 
 	<main class="main">
+		<div class="banner">
+			<h2 class="banner-title">订单支付</h2>
+		</div>
 		<section class="item-section order-payment">
 			<div class="content-4">
 				<p>恭喜您的订单提交成功！</p>
@@ -114,9 +115,15 @@
 				<button>更改支付方式</button>
 			</div>
 			<div class="content-11">
-				<p>订单状态：待付款</p>
-				<p>订单编号：YS2017112215001A&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp数量：2</p>
-				<p>创建日期：2017-11-22 15:20:01&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp总计：¥2，230</p>
+				<p class="item">订单状态：待付款</p>
+				<p class="item">
+					<span>订单编号：YS2017112215001A</span>
+					<span class="item-count">数量：2</span>
+				</p>
+				<p class="item">
+					<span>创建日期：2017-11-22 15:20:01</span>
+					<spa class="item-total">总计：¥2，230</span>
+				</p>
 			</div>
 		</section>
 		<section class="item-section product-section">
