--- a/place.html
+++ b/place.html
@@ -76,24 +76,25 @@
         </div>
     </nav>
 </header>
-    <div class="banner">
-        <h2 class="banner-title">法国</h2>
-    </div>
+
     <main class="main">
+        <div class="banner">
+            <h2 class="banner-title">葡萄牙</h2>
+        </div>
         <section class="item-section">
             <div class="product-place">
                 <ul class="place-list">
                     <li class="place-item active">
-                        <a class="place-link">红葡萄酒</a>
+                        <a class="place-link">里斯本</a>
                     </li>
                     <li class="place-item">
-                        <a class="place-link">白葡萄酒</a>
+                        <a class="place-link">阿连特茹</a>
                     </li>
                     <li class="place-item">
-                        <a class="place-link">起泡酒</a>
+                        <a class="place-link">内贝拉</a>
                     </li>
                     <li class="place-item">
-                        <a class="place-link">桃红葡萄酒</a>
+                        <a class="place-link">白拉达</a>
                     </li>
                     </li>
                     <li class="place-item">
