--- a/payment-success.html
+++ b/payment-success.html
@@ -112,7 +112,7 @@
                         </p>
                     </div>
                 </a>
-                <a class="good-choose" href="aproducthtml">
+                <a class="good-choose" href="product.html">
                     <div></div>
                     <div>
                         <p>2007年勃艮酒庄桃红葡萄酒</p>
