修改article 浏览更多样式

--- a/article.html
+++ b/article.html
@@ -101,10 +101,9 @@
                 </div>
                 <div class="f-content"></div>
                 <div class="content-5">
-                    <span>浏览更多文章</span>
+                    <span class="view-more">浏览更多文章</span>
                     <span>></span>
                 </div>
-                <div class="f-content"></div>
             </article>
         </section>
     </main>
