--- a/login.html
+++ b/login.html
@@ -44,8 +44,8 @@
     <!-- IOS图标 -->
     <!-- apple-touch-icon 图片自动处理成圆角和高光等效果 -->
 
-    <!-- <link rel="apple-touch-icon" href="favicon.png">
-    <link rel="Shortcut Icon" href="favicon.png" type="image/x-icon"> -->
+    <link rel="apple-touch-icon" href="favicon.png">
+    <link rel="Shortcut Icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/fonts/iconfont.css">
     <link rel="stylesheet" href="css/swiper/swiper.css">
     <link rel="stylesheet" href="css/layout.css">
@@ -62,7 +62,7 @@
                     <a class="nav-collaspe" href="navigation.html">
                         <i class="iconfont icon-rows"></i>
                     </a>
-                    <a class="nav-search" href="search.html">
+                    <a id="nav-search" class="nav-search" href="###">
                         <i class="iconfont icon-magnifier"></i>
                     </a>
                 </div>
@@ -71,10 +71,14 @@
                         <img src="images/site-logo.png" alt="site logo">
                     </a>
                 </div>
+                <a class="nav-login" href="login.html">
+                    <i class="iconfont icon-account"></i>
+                </a>
                 <a class="nav-cart" href="login.html">
                     <i class="iconfont icon-cc-cart"></i>
                 </a>
             </div>
+
         </nav>
     </header>
 
@@ -100,7 +104,7 @@
                                 </div>
                                 <div class="user-item">
                                     <label class="user-label" for="password">密码</label>
-                                    <input class="user-input" id="password" type="text" placeholder="至少六个字符、必须含有数字和字母" required>
+                                    <input class="user-input" id="password" type="password" placeholder="至少六个字符、必须含有数字和字母" required>
                                 </div>
                                 <a class="user-btn" href="cart.html">登录</a>
                                 <!-- <input type="submit" value="登录"></input> -->
@@ -185,6 +189,7 @@
     <script src="js/public/jquery.min.js"></script>
     <script src="js/public/base.js"></script>
     <script src="js/public/swiper/swiper.js"></script>
+    <script src="js/public/search-popup.js"></script>
     <!-- <script src="js/settlement-method.js"></script> -->
 </body>
 
