--- a/product.html
+++ b/product.html
@@ -44,8 +44,8 @@
 	<!-- IOS图标 -->
 	<!-- apple-touch-icon 图片自动处理成圆角和高光等效果 -->
 
-	<!-- <link rel="apple-touch-icon" href="favicon.png">
-	<link rel="Shortcut Icon" href="favicon.png" type="image/x-icon"> -->
+	<link rel="apple-touch-icon" href="favicon.png">
+	<link rel="Shortcut Icon" href="favicon.png" type="image/x-icon">
 	<link rel="stylesheet" href="css/fonts/iconfont.css">
 	<link rel="stylesheet" href="css/swiper/swiper.css">
 	<link rel="stylesheet" href="css/layout.css">
@@ -61,7 +61,7 @@
 					<a class="nav-collaspe" href="navigation.html">
 						<i class="iconfont icon-rows"></i>
 					</a>
-					<a class="nav-search" href="search.html">
+					<a id="nav-search" class="nav-search" href="###">
 						<i class="iconfont icon-magnifier"></i>
 					</a>
 				</div>
@@ -70,10 +70,14 @@
 						<img src="images/site-logo.png" alt="site logo">
 					</a>
 				</div>
+				<a class="nav-login" href="login.html">
+					<i class="iconfont icon-account"></i>
+				</a>
 				<a class="nav-cart" href="login.html">
 					<i class="iconfont icon-cc-cart"></i>
 				</a>
 			</div>
+
 		</nav>
 	</header>
 	<main class="main">
@@ -119,8 +123,8 @@
 					</div>
 				</div>
 				<div class="middle-content-4">
+					<a class="btn" href="order-payment.html">立即结算</a>
 					<a class="btn" href="cart.html">加入购物车</a>
-					<a class="btn" href="cart.html">加入愿望清单</a>
 				</div>
 				<div class="middle-content-5">
 					<p>独特优势</p>
@@ -143,10 +147,10 @@
 					<div></div>
 					<div></div>
 				</div>
-				<div class="middle-content-4">
+				<!-- <div class="middle-content-4">
 					<a class="btn" href="order-payment.html">立即结算</a>
 					<a class="btn" href="cart.html">加入购物车</a>
-				</div>
+				</div> -->
 			</div>
 		</section>
 		<section class="item-section nessary-introduction">
@@ -318,6 +322,7 @@
 	<script src="js/public/jquery.min.js"></script>
 	<script src="js/public/base.js"></script>
 	<script src="js/public/swiper/swiper.js"></script>
+	<script src="js/public/search-popup.js"></script>
 </body>
 
 </html>
