--- a/red-wine.html
+++ b/red-wine.html
@@ -61,7 +61,7 @@
 					<a class="nav-collaspe" href="navigation.html">
 						<i class="iconfont icon-rows"></i>
 					</a>
-					<a class="nav-search" href="search.html">
+					<a id="nav-search" class="nav-search" href="###">
 						<i class="iconfont icon-magnifier"></i>
 					</a>
 				</div>
@@ -70,10 +70,14 @@
 						<img src="images/site-logo.png" alt="site logo">
 					</a>
 				</div>
+				<a class="nav-login" href="login.html">
+					<i class="iconfont icon-account"></i>
+				</a>
 				<a class="nav-cart" href="login.html">
 					<i class="iconfont icon-cc-cart"></i>
 				</a>
 			</div>
+
 		</nav>
 	</header>
 
@@ -296,6 +300,7 @@
 	<script src="js/public/jquery.min.js"></script>
 	<script src="js/public/base.js"></script>
 	<script src="js/public/swiper/swiper.js"></script>
+	<script src="js/public/search-popup.js"></script>
 </body>
 
 </html>
