添加不同产地、不同酒类页面

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- IOS图标 -->
     <!-- apple-touch-icon 图片自动处理成圆角和高光等效果 -->
 
-    <link rel="apple-touch-icon" href="favicon.png">s
+    <link rel="apple-touch-icon" href="favicon.png">
     <link rel="Shortcut Icon" href="favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/fonts/iconfont.css">
     <link rel="stylesheet" href="css/swiper/swiper.css">
@@ -142,7 +142,7 @@
             <div class="swiper-container-2">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a class="area-item" href="place.html">
+                        <a class="area-item" href="australia.html">
                             <div class="item-figure small">
                                 <img src="images/icon-6.png" alt="">
                             </div>
@@ -152,7 +152,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="area-item" href="place.html">
+                        <a class="area-item" href="french.html">
                             <div class="item-figure">
                                 <img src="images/icon-7.png" alt="">
                             </div>
@@ -162,7 +162,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide">
-                        <a class="area-item" href="place.html">
+                        <a class="area-item" href="spain.html">
                             <div class="item-figure">
                                 <img src="images/icon-4.png" alt="">
                             </div>
@@ -172,7 +172,7 @@
                         </a>
                     </div>
                     <div class="swiper-slide product-area-item">
-                        <a class="area-item" href="place.html">
+                        <a class="area-item" href="italy.html">
                             <div class="item-figure">
                                 <img src="images/icon-1.png" alt="">
                             </div>
@@ -207,7 +207,7 @@
             </a>
         </section>
         <section class="item-section">
-            <a class="media" href="red-wine.html">
+            <a class="media" href="white-wine.html">
                 <div class="media-figure">
                     <img src="images/product-m-4.png" alt="">
                 </div>
@@ -218,25 +218,25 @@
             </a>
         </section>
         <section class="item-section">
-            <div class="card" data-href="red-wine.html">
+            <a class="card" href="sparkling-wine.html">
                 <div class="media-figcaption">
                     <h3 class="media-title">起泡酒</h3>
                 </div>
                 <div class="media-figure">
                     <img src="images/product-m-5.png" alt="">
                 </div>
-            </div>
-            <div class="card" data-href="red-wine.html">
+            </a>
+            <a class="card" href="pink-wine.html">
                 <div class="media-figcaption">
                     <h3 class="media-title">桃红葡萄酒</h3>
                 </div>
                 <div class="media-figure">
                     <img src="images/product-m-6.png" alt="">
                 </div>
-            </div>
+            </a>
         </section>
         <section class="item-section">
-            <a class="media" href="red-wine.html">
+            <a class="media" href="peripheral-product.html">
                 <div class="media-figure media-item">
                     <img src="images/product-m-7.png" alt="">
                 </div>
@@ -247,7 +247,7 @@
             </a>
         </section>
         <section class="item-section">
-            <a class="media" href="red-wine.html">
+            <a class="media" href="suit-recommendation.html">
                 <div class="media-figcaption">
                     <h3 class="media-title">套装推介</h3>
                     <p class="media-text">好酒配好杯</p>
