--- a/place.html
+++ b/place.html
@@ -49,7 +49,7 @@
     <link rel="stylesheet" href="css/fonts/iconfont.css">
     <link rel="stylesheet" href="css/swiper/swiper.css">
     <link rel="stylesheet" href="css/layout.css">
-    <title>红葡萄酒</title>
+    <title>其他产地</title>
     <link rel="stylesheet" type="text/css" href="css/red-wine.css">
 </head>
 
@@ -83,7 +83,7 @@
 
     <main class="main">
         <div class="banner">
-            <h2 class="banner-title">葡萄牙</h2>
+            <h2 class="banner-title">其他产地</h2>
         </div>
         <section class="item-section">
             <div class="product-place">
